# AIStoCOT_Service

./: .gitignore  CMakeLists.txt  README.md  hasMain.cpp
runFolder/_web_root/: _index.html  index.html
runFolder/web_root/: vindex.html
src_AISCOT/: AISParser.cpp  AISParser.h  AIStoCoT.h
src_COT/: COTModule.cpp  COTModule.h  COTSender.cpp  COTSender.h
